apps/teste-kubernetes/base/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: teste-kubernetes
    backstage.io/kubernetes-id: teste-kubernetes
  name: teste-kubernetes
spec:
  finalizers:
  - kubernetes

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: teste-kubernetes.diegoluisi.eti.br
  labels:
    app: teste-kubernetes
    backstage.io/kubernetes-id: teste-kubernetes
  name: teste-kubernetes
  namespace: teste-kubernetes
spec:
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: teste-kubernetes
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teste-kubernetes
    backstage.io/kubernetes-id: teste-kubernetes
  name: teste-kubernetes
  namespace: teste-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teste-kubernetes
  template:
    metadata:
      labels:
        app: teste-kubernetes
        backstage.io/kubernetes-id: teste-kubernetes
    spec:
      containers:
      - image: diegoluisi/teste-kubernetes:3c12d96f
        imagePullPolicy: IfNotPresent
        name: teste-kubernetes
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-kubernetes
  namespace: teste-kubernetes
  labels:
    backstage.io/kubernetes-id: teste-kubernetes
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - teste-kubernetes.diegoluisi.eti.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: teste-kubernetes
        port:
          number: 8080
